<resources>
    <string name="app_name">FRD Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FRD Inventory</string>
    <string name="nav_header_subtitle">frd@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Return to Sign In</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="useremail">Email Id</string>
    <string name="enter_user_name">Enter User Pin </string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="resetPassword">Reset Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requisition">Requisition No. :</string>
    <string name="location">Location :</string>
    <string name="bookselect">Journal</string>
    <string name="desc">Description</string>
    <string name="ineventory_ship_pick">Shipper List</string>
    <string name="branch_Inve_reciving">Branch Inventory Receiving</string>
    <string name="inventory_counting">Inventory Counting</string>
    <string name="material_reciving">Material Receiving</string>
    <string name="qr_details">QR Details</string>
    <string name="scan_pick">Scan/Pick</string>
    <string name="packed_qty">Packed Qty:</string>
    <string name="update_qty">Update</string>
    <string name="updateQty_submit">Submit</string>
    <string name="transferOrderheader">Transfer Order Detail</string>
    <string name="transferorderNo">Transfer Order No. :</string>
    <string name="invalid_QR_codeDetails">This QR code is not available please scan another item.</string>
    <string name="ok">OK</string>
    <string name="mrnNo">MRN No. :</string>
    <string name="activityNo">Activity No. :</string>
    <string name="date">Date :</string>
    <string name="scan">Scan</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="onBack">Do you want to exit? All data will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="jouranl">Journal No :</string>
    <string name="warehouse">Warehouse :</string>
    <string name="qrDetailQtyUpdte">Quantity Update Details</string>
    <string name="user_info">User Info</string>
    <string name="settings">Setting</string>
    <string name="logout">Log Out</string>
    <string name="sch_activity">Sch. Activity :</string>
</resources>
