<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/menu_icon"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/user_details"
                android:icon="@drawable/ic_user_info"
                android:title="@string/user_info"
                android:tooltipText="@string/settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/logout_menu"
                android:icon="@drawable/log_out"
                android:title="@string/logout"
                android:tooltipText="@string/logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>



    <!--<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </menu>-->