<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Confirm Exit"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onBack"
            android:layout_weight=".1"
            android:textSize="12sp"
            android:textAlignment="center"
            android:padding="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:text="@string/ok"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_width="70dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="10dp"
                android:layout_height="25dp"
                android:layout_weight=".1"
                android:textAllCaps="false"
                android:background="@drawable/buttonshape_ship"
                android:shadowColor="#A8A8A8"
                android:shadowRadius="5"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:layout_weight=".1"
                android:textSize="12sp"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="90dp"
                android:textAllCaps="false"
                android:background="@drawable/buttonshape_ship"
                android:shadowColor="#A8A8A8"
                android:shadowRadius="5"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>