<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayoutBackground"
    tools:context=".Login.LoginActivity">
    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@mipmap/blur_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@mipmap/frd_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="#40ffffff"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editTextUserPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_user_name"
                        android:text="123456"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingBottom="7dp"
                        android:paddingTop="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="10sp"/>

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="05dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editTextUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:text="123456"
                        android:inputType="textPassword"
                        android:paddingBottom="7dp"
                        android:paddingTop="5dp"
                        android:paddingLeft="05dp"
                        android:paddingRight="05dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="10sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textAllCaps="true"/>
                
                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Forgot Password"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_marginTop="35dp"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayoutForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="#40ffffff"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editTextEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/useremail"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="7dp"
                        android:paddingTop="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="10sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonReset"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_background"
                    android:text="@string/resetPassword"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:typeface="normal"
                    android:textSize="12sp"
                    android:layout_marginTop="40dp"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>