<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorPrimary">
           <!-- <ImageView
                android:id="@+id/img_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:src="@mipmap/back"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Update Quantity"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/packed_qty"
                android:layout_weight=".1"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/pckd_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:inputType="number"
                android:textSize="10sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_qty"
                android:layout_weight=".1"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/updte_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:inputType="number"
                android:textSize="10sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:text="@string/updateQty_submit"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:textAllCaps="false"
                android:background="@drawable/buttonshape_ship"
                android:shadowColor="#A8A8A8"
                android:shadowRadius="5"
                />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>