<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="3dp"
                android:focusableInTouchMode="true"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/linearLayoutInventoryCountTemp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/background_card"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/jouranl"
                            android:textColor="@color/textcolor"
                            android:textSize="12sp"
                            android:layout_weight=".1"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/journalTemp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="05dp"
                            android:textAlignment="textStart"
                            android:paddingTop="02dp"
                            android:text="3"
                            android:textColor="@color/textcolor"
                            android:textSize="10sp"
                            android:layout_weight=".1"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/warehouse"
                            android:textColor="@color/textcolor"
                            android:textSize="12sp"
                            android:layout_weight=".1"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/wareHouseTemp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="05dp"
                            android:paddingTop="02dp"
                            android:textAlignment="textStart"
                            android:text="3"
                            android:textColor="@color/textcolor"
                            android:textSize="10sp"
                            android:layout_weight=".1"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/activityNo"
                            android:textColor="@color/textcolor"
                            android:textSize="11sp"
                            android:visibility="gone"
                            android:layout_weight=".1"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/activityNo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="05dp"
                            android:paddingTop="02dp"
                            android:textAlignment="textStart"
                            android:text="3"
                            android:textColor="@color/textcolor"
                            android:visibility="gone"
                            android:textSize="10sp"
                            android:layout_weight=".1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/date"
                            android:visibility="invisible"
                            android:textStyle="bold"
                            android:textColor="@color/textcolor"
                            android:textSize="12sp"
                            android:layout_weight=".1"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="05dp"
                            android:textAlignment="textStart"
                            android:visibility="invisible"
                            android:text="3"
                            android:textColor="@color/textcolor"
                            android:textSize="10sp"
                            android:layout_weight=".1"/>

                    </LinearLayout>

                    <!--<TextView-->
                    <!--android:id="@+id/textView_branchName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="start"-->
                    <!--android:gravity="start"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:paddingLeft="17dp"-->
                    <!--android:text="Noida"-->
                    <!--android:textColor="@color/textcolor"-->
                    <!--android:textSize="12sp" />-->


                    <!-- <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_gravity="right"
                         android:layout_marginRight="5dp"
                         android:background="@mipmap/total" />-->

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>